--- a/report/licenses.html
+++ b/report/licenses.html
@@ -206,6 +206,11 @@ text-align: left;
 <td><a href="https://github.com/sam-github/node-debuglog" target="_blank">https://github.com/sam-github/node-debuglog</a></td>
 </tr>
 <tr>
+<td>domutils@1.5.1</td>
+<td><a href="http://en.wikipedia.org/wiki/BSD_license" target="_blank">BSD*</a></td>
+<td><a href="https://github.com/FB55/domutils" target="_blank">https://github.com/FB55/domutils</a></td>
+</tr>
+<tr>
 <td>socket.lib.tools@0.0.1</td>
 <td><a href="http://en.wikipedia.org/wiki/MIT_license" target="_blank">MIT</a></td>
 <td><a href="https://github.com/luscus/socket.lib.tools" target="_blank">https://github.com/luscus/socket.lib.tools</a></td>
@@ -214,6 +219,11 @@ text-align: left;
 <td>request-ip@0.0.4</td>
 <td><a href="http://en.wikipedia.org/wiki/MIT_license" target="_blank">MIT</a></td>
 <td><a href="https://github.com/pbojinov/request-ip" target="_blank">https://github.com/pbojinov/request-ip</a></td>
+</tr>
+<tr>
+<td>dom-serializer@0.0.1</td>
+<td><span class="error">UNKNOWN</span></td>
+<td><a href="https://github.com/cheeriojs/dom-renderer" target="_blank">https://github.com/cheeriojs/dom-renderer</a></td>
 </tr>
 <tr>
 <td>domhandler@2.3.0</td>
@@ -416,6 +426,11 @@ text-align: left;
 <td><a href="https://github.com/nodeca/argparse" target="_blank">https://github.com/nodeca/argparse</a></td>
 </tr>
 <tr>
+<td>entities@1.1.1</td>
+<td><a href="http://en.wikipedia.org/wiki/BSD_license" target="_blank">BSD-like</a></td>
+<td><a href="https://github.com/fb55/node-entities" target="_blank">https://github.com/fb55/node-entities</a></td>
+</tr>
+<tr>
 <td>has-ansi@0.1.0</td>
 <td><a href="http://en.wikipedia.org/wiki/MIT_license" target="_blank">MIT</a></td>
 <td><a href="https://github.com/sindresorhus/has-ansi" target="_blank">https://github.com/sindresorhus/has-ansi</a></td>
@@ -449,11 +464,6 @@ text-align: left;
 <td>grunt-legacy-log@0.1.1</td>
 <td><a href="http://en.wikipedia.org/wiki/MIT_license" target="_blank">MIT</a></td>
 <td><a href="https://github.com/gruntjs/grunt-legacy-log" target="_blank">https://github.com/gruntjs/grunt-legacy-log</a></td>
-</tr>
-<tr>
-<td>domutils@1.5.0</td>
-<td><a href="http://en.wikipedia.org/wiki/BSD_license" target="_blank">BSD*</a></td>
-<td><a href="https://github.com/FB55/domutils" target="_blank">https://github.com/FB55/domutils</a></td>
 </tr>
 <tr>
 <td>treeify@1.0.1</td>
